Fix Google warning box overlapping

--- a/data/css/ui.css
+++ b/data/css/ui.css
@@ -1,3 +1,7 @@
+#google-alert {
+  display: inline-block;
+}
+
 #table th:nth-of-type(2), #table td:nth-of-type(2) {
   text-align: right;
 }
